--- a/src/app/question-category/question-category-create/question-category-create.component.html
+++ b/src/app/question-category/question-category-create/question-category-create.component.html
@@ -1,12 +1,12 @@
 <h2>add Question Category</h2>
-<div class="col-md-6">
+<div class="container-fluid">
   <form [formGroup]="addForm">
 
     <div class="form-group">
-      <label for="question_category_name">question_category_name :</label>
-      <input type="question_category_name" formControlName="question_category_name" name="question_category_name" class="form-control" id="question_category_name">
+      <label for="question_category_name">question_category_name</label>
+      <input type="text" formControlName="question_category_name" class="form-control">
     </div>
 
-    <button (click)="onSubmit()" class="btn btn-success">Update</button>
+    <button (click)="onSubmit()" class="btn btn-success" type="submit">Create</button>
   </form>
 </div>
