--- a/src/app/question-category/question-category-create/question-category-create.component.html
+++ b/src/app/question-category/question-category-create/question-category-create.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="addForm">
 
     <div class="form-group">
-      <label for="question_category_name">question_category_name</label>
+      <label for="question_category_name">question category name</label>
       <input type="text" formControlName="question_category_name" class="form-control">
     </div>
 
