--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -1,33 +1,38 @@
-<h2>add New Item</h2>
-<div class="col-md-6">
-  <form [formGroup]="addForm">
-    <div class="form-group">
-<label for="item_category_id">item_category_id :</label>
-      <input type="item_category_id" formControlName="item_category_id" name="item_category_id" class="form-control" id="item_category_id">
-<br>
-<label for="name">name :</label>
-      <input type="name" formControlName="name" placeholder="Level name" name="name" class="form-control" id="name">
-<br>
-<label for="item_desc">item_desc :</label>
-      <input type="item_desc" formControlName="item_desc" placeholder="Level name" name="item_desc" class="form-control" id="item_desc">
-<br>
-<label for="star">star :</label>
-      <input type="star" formControlName="star" placeholder="Level name" name="star" class="form-control" id="star">
-<br>
-<label for="image">image :</label>
-      <input type="image" formControlName="image" placeholder="Level name" name="image" class="form-control" id="image">
-<br>
-<label for="x_coordinate">x_coordinate :</label>
-      <input type="x_coordinate" formControlName="x_coordinate" placeholder="Level name" name="x_coordinate" class="form-control" id="x_coordinate">
-<br>
-<label for="y_coordinate">y_coordinate :</label>
-      <input type="y_coordinate" formControlName="y_coordinate" placeholder="Level name" name="y_coordinate" class="form-control" id="y_coordinate">
-<br>
-<label for="itemCategory">itemCategory :</label>
-      <input type="itemCategory" formControlName="itemCategory" placeholder="Level name" name="itemCategory" class="form-control" id="itemCategory">
-<br>
-    </div>
-
-    <button (click)="onSubmit()" class="btn btn-success">create</button>
-  </form>
+<div class="container-fluid">
+      <h2>add New Item</h2>
+      <form [formGroup]="addForm">
+            <div class="form-group">
+                  <label>item category id</label>
+                  <input type="text" formControlName="item_category_id" class="form-control">
+            </div>
+            <div class="form-group">
+                  <label>name</label>
+                  <input type="text" formControlName="name" class="form-control">
+            </div>
+            <div class="form-group">
+                  <label>item desc</label>
+                  <input type="text" formControlName="item_desc" class="form-control">
+            </div>
+            <div class="form-group">
+                  <label>star</label>
+                  <input type="text" formControlName="star" class="form-control">
+            </div>
+            <div class="form-group">
+                  <label>image</label>
+                  <input type="file" (change)="uploadImage($event)" class="form-control">
+            </div>
+            <div class="form-group">
+                  <label>snippet</label>
+                  <input type="file" (change)="uploadSnippet($event)" class="form-control">
+            </div>
+            <div class="form-group">
+                  <label>Item Category</label>
+                  <input type="text" formControlName="itemCategory" class="form-control">
+            </div>
+            <!-- <div class="form-group">
+                  <label>Inventory id</label>
+                  <input type="text" formControlName="inventories" class="form-control">
+            </div> -->
+            <button (click)="onUpload()" class="btn btn-success">create</button>
+      </form>
 </div>
