--- a/src/app/answer/answer-show/answer-show.component.html
+++ b/src/app/answer/answer-show/answer-show.component.html
@@ -1,8 +1,9 @@
 <h2>My Answers</h2>
 
-<div><!--   (click) passes input value to add() and then clears the input -->
-  <button routerLink="/answers-create">
-    add
+<div>
+  <!--   (click) passes input value to add() and then clears the input -->
+  <button routerLink="/answers-create" class="btn btn-success ml-2">
+    add answer
   </button>
 </div>
 
@@ -16,15 +17,16 @@
     <th>delete</th>
   </tr>
   <tr *ngFor="let c of answers">
-    <a routerLink="/answers/{{c.id}}">
     <td>{{c.id}}</td>
-    </a>
     <td>{{c.challenge_id}}</td>
     <td>{{c.answer_text}}</td>
     <td>{{c.is_correct}}</td>
     <td>{{c.challenge?.challenge_question}}</td>
     <td>
-      <button class="btn btn-danger" (click)="delete(c)"> Delete</button>
+      <a routerLink="/answers/{{c.id}}">
+        <button class="btn btn-primary"> Update</button>
+      </a>
+      <button class="btn btn-danger ml-2" (click)="delete(c)"> Delete</button>
     </td>
   </tr>
 </table>
