able to upload and edit image

--- a/src/app/answer/answer-show/answer-show.component.html
+++ b/src/app/answer/answer-show/answer-show.component.html
@@ -13,8 +13,8 @@
     <th>challenge_id</th>
     <th>answer_text</th>
     <th>is_correct</th>
-    <th>challenge</th>
-    <th>delete</th>
+    <th>challenge question</th>
+    <th>action</th>
   </tr>
   <tr *ngFor="let c of answers">
     <td>{{c.id}}</td>
