--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -21,7 +21,12 @@
       <input [(ngModel)]="item.star" />
     </label>
   </div>
-    <div>
+  <div>
+      <label>gender:
+        <input [(ngModel)]="item.gender" />
+      </label>
+    </div>
+      <div>
     <label>image:
       <input [(ngModel)]="item.image" />
     </label>
