--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -18,6 +18,10 @@
                   <input type="text" formControlName="star" class="form-control">
             </div>
             <div class="form-group">
+                  <label>gender</label>
+                  <input type="text" formControlName="gender" class="form-control">
+            </div>
+            <div class="form-group">
                   <label>image</label>
                   <input type="file" (change)="uploadImage($event)" class="form-control">
             </div>
