--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -6,6 +6,7 @@
     <th>name</th>
     <th>item_desc</th>
     <th>star</th>
+    <th>gender</th>
     <th>image</th>
     <th>snippet</th>
     <th>item Category</th>
@@ -18,6 +19,7 @@
     <td>{{item.name}}</td>
     <td>{{item.item_desc}}</td>
     <td>{{item.star}}</td>
+    <td>{{item.gender}}</td>
     <td><img height="64" width="64" src="{{item.image}}"></td>
     <td><img height="64" width="64" src="{{item.snippet}}"></td>
     <td>{{item.itemCategory?.item_category_name}}</td>
