--- a/src/app/question-category/question-category.component.html
+++ b/src/app/question-category/question-category.component.html
@@ -1,6 +1,11 @@
 <h2>E - Kita Question Category</h2>
-<a href="question-categories-create"><button class="btn btn-success ml-2">create question Category</button></a>
-<table>
+<div>
+    <!--   (click) passes input value to add() and then clears the input -->
+    <button routerLink="/question-categories-create" class="btn btn-success ml-2">
+      add Question Category
+    </button>
+  </div>
+  <table>
 	<tr>
     <th>id</th>
     <th>name</th>
