--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,7 +1,12 @@
 <h2>E - Kita Items</h2>
-<a href="items-create"><button class="btn btn-success ml-2">create item</button></a>
+<div>
+  <!--   (click) passes input value to add() and then clears the input -->
+  <button routerLink="/items-create" class="btn btn-success ml-2">
+    add Item
+  </button>
+</div>
 <table>
-	<tr>
+  <tr>
     <th>id</th>
     <th>name</th>
     <th>item_desc</th>
@@ -11,11 +16,9 @@
     <th>snippet</th>
     <th>item Category</th>
     <th>action</th>
-	</tr>
+  </tr>
   <tr *ngFor="let item of items">
-  	<a routerLink="/itemdetail/{{item.id}}">
     <td>{{item.id}}</td>
-    </a>
     <td>{{item.name}}</td>
     <td>{{item.item_desc}}</td>
     <td>{{item.star}}</td>
@@ -24,6 +27,8 @@
     <td><img height="64" width="64" src="{{item.snippet}}"></td>
     <td>{{item.itemCategory?.item_category_name}}</td>
     <td>
+      <a routerLink="/itemdetail/{{item.id}}">
+      </a>
       <button class="btn btn-primary"> Update</button>
       <button class="btn btn-danger ml-2" (click)="deleteItem(item)"> Delete</button>
     </td>
@@ -100,7 +105,7 @@ Selected Topic : {{selectedTopic}}
   <label>Item xp : <input #xp /></label>
   <label>Item image : <input #image /></label>
   <label>Item sound : <input #sound /></label> -->
-  <!-- (click) passes input value to add() and then clears the input -->
+<!-- (click) passes input value to add() and then clears the input -->
 <!--   <button (click)="add(title);">
     add
   </button>
