--- a/src/app/question-difficulty/question-difficulty.component.html
+++ b/src/app/question-difficulty/question-difficulty.component.html
@@ -1,19 +1,24 @@
 <h2>E - Kita Question Difficulties</h2>
-
+<div>
+    <!--   (click) passes input value to add() and then clears the input -->
+    <button routerLink="/question-difficulties-create" class="btn btn-success ml-2">
+      add Question Difficulty
+    </button>
+  </div>
 <table>
-	<tr>
+  <tr>
     <th>id</th>
     <th>difficulty</th>
     <th>Action</th>
-	</tr>
+  </tr>
   <tr *ngFor="let level of levels">
-    <a routerLink="/question-difficulties/{{level.id}}"><td>{{level.id}}</td></a>
+    <td>{{level.id}}</td>
     <td>{{level.question_difficulty_name}}</td>
     <td>
-      <button class="btn btn-primary"> Update</button>
+      <a routerLink="/question-difficulties/{{level.id}}">
+        <button class="btn btn-primary"> Update</button>
+      </a>
       <button class="btn btn-danger ml-2" (click)="delete(level)"> Delete</button>
     </td>
   </tr>
 </table>
-<a href="question-difficulties-create"><button class="btn btn-success">create level</button></a>
-<!-- <app-question-difficulty-create></app-question-difficulty-create> -->
