--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -1,51 +1,35 @@
-<div *ngIf="item">
-  <h2>{{item.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{item.id}}</div>
+<div *ngIf="item" class="container-fluid">
   <div>
-    <label>item_category_id:
-      <input [(ngModel)]="item.item_category_id"/>
-    </label>
+    <h2>Update Item Id : {{item.id}}</h2>
   </div>
-  <div>
-    <label>name :
-      <input [(ngModel)]="item.name"/>
-    </label>
+  <div class="form-group">
+    <label>item_category_id</label>
+    <input [(ngModel)]="item.item_category_id" class="form-control"/>
   </div>
-    <div>
-    <label>item_desc:
-      <input [(ngModel)]="item.item_desc"/>
-    </label>
+  <div class="form-group">
+    <label>name</label>
+    <input [(ngModel)]="item.name" class="form-control"/>
   </div>
-    <div>
-    <label>star:
-      <input [(ngModel)]="item.star" />
-    </label>
+  <div class="form-group">
+    <label>item_desc</label>
+    <input [(ngModel)]="item.item_desc" class="form-control"/>
   </div>
-  <div>
-      <label>gender:
-        <input [(ngModel)]="item.gender" />
-      </label>
+  <div class="form-group">
+    <label>star</label>
+    <input [(ngModel)]="item.star" class="form-control"/>
+  </div>
+  <div class="form-group">
+    <label>gender</label>
+    <input [(ngModel)]="item.gender" class="form-control"/>
+  </div>
+  <div class="form-group">
+    <label>Image</label>
+    <input class="form-control" type="file" (change)="onFileChanged($event)" class="form-control">
+  </div>
+  <div class="form-group">
+      <label>Snippet</label>
+      <input class="form-control" type="file" (change)="onSnippetChanged($event)" class="form-control">
     </div>
-      <div>
-    <label>image:
-      <input [(ngModel)]="item.image" />
-    </label>
-  </div>
-    <div>
-    <label>x_coordinate:
-      <input [(ngModel)]="item.x_coordinate" />
-    </label>
-  </div>
-    <div>
-    <label>y_coordinate:
-      <input [(ngModel)]="item.y_coordinate" />
-    </label>
-  </div>
-    <div>
-    <label>itemCategory:
-      <input [(ngModel)]="item.itemCategory" />
-    </label>
-  </div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
+    <button class="btn btn-secondary" (click)="goBack()">go back</button>
+  <button class="btn btn-success ml-2" (click)="save()">save</button>
 </div>
