--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -22,14 +22,21 @@
     <td>{{item.name}}</td>
     <td>{{item.item_desc}}</td>
     <td>{{item.star}}</td>
-    <td>{{item.gender}}</td>
+    <td>
+        <div *ngIf="item.gender==1; else elseBlock">
+            female
+          </div>
+          <ng-template #elseBlock>
+            male
+          </ng-template>
+        </td>
     <td><img height="64" width="64" src="{{item.image}}"></td>
     <td><img height="64" width="64" src="{{item.snippet}}"></td>
     <td>{{item.itemCategory?.item_category_name}}</td>
     <td>
-      <a routerLink="/itemdetail/{{item.id}}">
+      <a routerLink="/items/{{item.id}}">
+        <button class="btn btn-primary"> Update</button>
       </a>
-      <button class="btn btn-primary"> Update</button>
       <button class="btn btn-danger ml-2" (click)="deleteItem(item)"> Delete</button>
     </td>
   </tr>
